buildscript {
    repositories {
        mavenLocal()
        maven { url 'https://repo.screamingsandals.org/public' }
    }
    dependencies {
        classpath 'org.screamingsandals.gradle.builder:screaming-plugin-builder:1.0.41'
    }
}

defaultTasks 'clean', 'screamCompile', 'allowJavadocUpload'

allprojects {
    group = 'org.screamingsandals.lib'
    version = SCREAMING_LIB_VERSION
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.screamingsandals.gradle.builder'

    repositories {
        minecraftLibraries()
        jitpack()
        sponge()
        placeholderApi()
    }

    sourceCompatibility = JavaVersion.VERSION_11
}
